# qembeddings

./: Dockerfile  README.md  cloudbuild.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
qembeddings/: __init__.py  docs.py
src/: __init__.py  api.py
