[tool.poetry]
name = "qembeddings"
version = "0.0.1"
description = "QEmbeddings is a library that allows you to generate embeddings from text using Hugging Face models."
authors = ["obahamonde <oscarmartinbahamondemunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sentence-transformers = "^2.7.0"
fastapi-slim = "^0.111.0"
uvicorn = "^0.29.0"
numpy = "^1.26.4"
cachetools = "^5.3.3"
orjson = "^3.10.3"
langchain = {extras = ["unstructured"], version = "^0.2.0"}
unstructured = "^0.14.0"
python-docx = "^1.1.2"
python-pptx = "^0.6.23"
openpyxl = "^3.1.2"
pdfminer-six = "^20231228"
pypdf = "^4.2.0"
pdf2image = "^1.17.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
